# bim-xarray

./: LICENSE  README.md  environment.yaml  pyproject.toml
src/bim_xarray/: __init__.py  _xarray.py  constants.py  io.py  metadata.py  napari.py  plot.py  process.py  units.py
